修改页面样式,添加关闭订单页面

--- a/KingPlatform/KingPlatform.csproj
+++ b/KingPlatform/KingPlatform.csproj
@@ -423,6 +423,7 @@
   <ItemGroup>
     <Content Include="Areas\HuaweiOrderManage\Views\FindPOList\News.cshtml" />
     <Content Include="Areas\HuaweiOrderManage\Views\FindPOList\Onway.cshtml" />
+    <Content Include="Areas\HuaweiOrderManage\Views\FindPOList\Closed.cshtml" />
     <None Include="Properties\PublishProfiles\KingPlatformConfig.pubxml" />
   </ItemGroup>
   <PropertyGroup>
