界面修改，添加导出pdf

--- a/KingPlatform/KingPlatform.csproj
+++ b/KingPlatform/KingPlatform.csproj
@@ -426,6 +426,7 @@
     <Content Include="Areas\HuaweiOrderManage\Views\FindPOList\News.cshtml" />
     <Content Include="Areas\HuaweiOrderManage\Views\FindPOList\Onway.cshtml" />
     <Content Include="Areas\HuaweiOrderManage\Views\FindPOList\Closed.cshtml" />
+    <Content Include="Areas\HuaweiOrderManage\Views\FindPOList\PODetails.cshtml" />
     <None Include="Properties\PublishProfiles\KingPlatformConfig.pubxml" />
   </ItemGroup>
   <ItemGroup />
