--- a/Basic.Code/Basic.Code.csproj
+++ b/Basic.Code/Basic.Code.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Operator\OperatorModel.cs" />
     <Compile Include="Operator\OperatorProvider.cs" />
     <Compile Include="PDF\iTextPDF.cs" />
+    <Compile Include="PDF\PODetailsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\DESEncrypt.cs" />
     <Compile Include="Security\Md5.cs" />
