--- a/KingPlatform/KingPlatform.csproj
+++ b/KingPlatform/KingPlatform.csproj
@@ -35,7 +35,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -404,6 +404,7 @@
     <Content Include="Areas\HuaweiOrderManage\Views\FindPOList\PODetails.cshtml" />
     <Content Include="Areas\HuaweiOrderManage\Views\StockManage\Index.cshtml" />
     <None Include="Properties\PublishProfiles\KingPlatformConfig.pubxml" />
+    <None Include="Properties\PublishProfiles\kingPlatformConfig1.pubxml" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
