--- a/King.Repository/King.Repository.csproj
+++ b/King.Repository/King.Repository.csproj
@@ -56,7 +56,9 @@
     <Compile Include="SystemSecurity\FilterIPRepository.cs" />
     <Compile Include="SystemSecurity\LogRepository.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\King.Domain\King.Domain.csproj">
       <Project>{c1d9edb6-2936-4731-9fd8-018afd0ce089}</Project>
@@ -66,10 +68,9 @@
       <Project>{b7b9290f-0741-4fae-b2c9-afe902a5b86a}</Project>
       <Name>Basic.Code</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Basic.Data\Basic.Data.csproj">
-      <Project>{c3d7bf70-9509-4d26-99c4-ed4a4d7c2c52}</Project>
-      <Name>Basic.Data</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="HuaweiOrderManage\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
