--- a/King.Domain/King.Domain.csproj
+++ b/King.Domain/King.Domain.csproj
@@ -31,7 +31,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,6 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context\DBContext\KingDbContext.cs" />
+    <Compile Include="Context\Extensions\DbHelper.cs" />
+    <Compile Include="Context\Extensions\EntityInterfaceExtensions.cs" />
+    <Compile Include="Context\Repository\IRepositoryBase.cs" />
+    <Compile Include="Context\Repository\IRepositoryBase.T.cs" />
+    <Compile Include="Context\Repository\RepositoryBase.cs" />
+    <Compile Include="Context\Repository\RepositoryBase.T.cs" />
     <Compile Include="Entity\SystemManage\AreaEntity.cs" />
     <Compile Include="Entity\SystemManage\ItemsDetailEntity.cs" />
     <Compile Include="Entity\SystemManage\ItemsEntity.cs" />
@@ -71,6 +88,32 @@
     <Compile Include="IRepository\SystemSecurity\IDbBackupRepository.cs" />
     <Compile Include="IRepository\SystemSecurity\IFilterIPRepository.cs" />
     <Compile Include="IRepository\SystemSecurity\ILogRepository.cs" />
+    <Compile Include="Mapping\SystemManage\AreaMap.cs" />
+    <Compile Include="Mapping\SystemManage\ItemsDetailMap.cs" />
+    <Compile Include="Mapping\SystemManage\ItemsMap.cs" />
+    <Compile Include="Mapping\SystemManage\ModuleButtonMap.cs" />
+    <Compile Include="Mapping\SystemManage\ModuleMap.cs" />
+    <Compile Include="Mapping\SystemManage\OrganizeMap.cs" />
+    <Compile Include="Mapping\SystemManage\RoleAuthorizeMap.cs" />
+    <Compile Include="Mapping\SystemManage\RoleMap.cs" />
+    <Compile Include="Mapping\SystemManage\UserLogOnMap.cs" />
+    <Compile Include="Mapping\SystemManage\UserMap.cs" />
+    <Compile Include="Mapping\SystemSecurity\DbBackupMap.cs" />
+    <Compile Include="Mapping\SystemSecurity\FilterIPMap.cs" />
+    <Compile Include="Mapping\SystemSecurity\LogMap.cs" />
+    <Compile Include="Migrations\201709110803463_InitialCreate.cs" />
+    <Compile Include="Migrations\201709110803463_InitialCreate.Designer.cs">
+      <DependentUpon>201709110803463_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709110904056_AddUserTest.cs" />
+    <Compile Include="Migrations\201709110904056_AddUserTest.Designer.cs">
+      <DependentUpon>201709110904056_AddUserTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709110917216_RemoveUserTest.cs" />
+    <Compile Include="Migrations\201709110917216_RemoveUserTest.Designer.cs">
+      <DependentUpon>201709110917216_RemoveUserTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\AuthorizeActionModel.cs" />
   </ItemGroup>
@@ -79,12 +122,26 @@
       <Project>{b7b9290f-0741-4fae-b2c9-afe902a5b86a}</Project>
       <Name>Basic.Code</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Basic.Data\Basic.Data.csproj">
-      <Project>{c3d7bf70-9509-4d26-99c4-ed4a4d7c2c52}</Project>
-      <Name>Basic.Data</Name>
-    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201709110803463_InitialCreate.resx">
+      <DependentUpon>201709110803463_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709110904056_AddUserTest.resx">
+      <DependentUpon>201709110904056_AddUserTest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709110917216_RemoveUserTest.resx">
+      <DependentUpon>201709110917216_RemoveUserTest.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entity\HuaweiOrderManage\" />
+    <Folder Include="IRepository\HuaweiOrderManage\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
