--- a/King.Domain/King.Domain.csproj
+++ b/King.Domain/King.Domain.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Context\Repository\IRepositoryBase.T.cs" />
     <Compile Include="Context\Repository\RepositoryBase.cs" />
     <Compile Include="Context\Repository\RepositoryBase.T.cs" />
+    <Compile Include="Entity\HuaweiOrderManage\HWStockEntity.cs" />
     <Compile Include="Entity\SystemManage\AreaEntity.cs" />
     <Compile Include="Entity\SystemManage\ItemsDetailEntity.cs" />
     <Compile Include="Entity\SystemManage\ItemsEntity.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Infrastructure\IDeleteAudited.cs" />
     <Compile Include="Infrastructure\IEntity.cs" />
     <Compile Include="Infrastructure\IModificationAudited.cs" />
+    <Compile Include="IRepository\HuaweiOrderManage\IHWStockRepository.cs" />
     <Compile Include="IRepository\SystemManage\IAreaRepository.cs" />
     <Compile Include="IRepository\SystemManage\IItemsDetailRepository.cs" />
     <Compile Include="IRepository\SystemManage\IItemsRepository.cs" />
@@ -88,6 +90,7 @@
     <Compile Include="IRepository\SystemSecurity\IDbBackupRepository.cs" />
     <Compile Include="IRepository\SystemSecurity\IFilterIPRepository.cs" />
     <Compile Include="IRepository\SystemSecurity\ILogRepository.cs" />
+    <Compile Include="Mapping\HuaweiOrderManage\HWStockMap.cs" />
     <Compile Include="Mapping\SystemManage\AreaMap.cs" />
     <Compile Include="Mapping\SystemManage\ItemsDetailMap.cs" />
     <Compile Include="Mapping\SystemManage\ItemsMap.cs" />
@@ -113,6 +116,26 @@
     <Compile Include="Migrations\201709110917216_RemoveUserTest.Designer.cs">
       <DependentUpon>201709110917216_RemoveUserTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709120234374_AddHWStock.cs" />
+    <Compile Include="Migrations\201709120234374_AddHWStock.Designer.cs">
+      <DependentUpon>201709120234374_AddHWStock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709120706523_ChangeHWStockID.cs" />
+    <Compile Include="Migrations\201709120706523_ChangeHWStockID.Designer.cs">
+      <DependentUpon>201709120706523_ChangeHWStockID.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709120821065_ChangeHWStockID1.cs" />
+    <Compile Include="Migrations\201709120821065_ChangeHWStockID1.Designer.cs">
+      <DependentUpon>201709120821065_ChangeHWStockID1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709130212058_ChangeHWStock.cs" />
+    <Compile Include="Migrations\201709130212058_ChangeHWStock.Designer.cs">
+      <DependentUpon>201709130212058_ChangeHWStock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709130326279_AddHWStockerrorMes.cs" />
+    <Compile Include="Migrations\201709130326279_AddHWStockerrorMes.Designer.cs">
+      <DependentUpon>201709130326279_AddHWStockerrorMes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\AuthorizeActionModel.cs" />
@@ -137,11 +160,23 @@
     <EmbeddedResource Include="Migrations\201709110917216_RemoveUserTest.resx">
       <DependentUpon>201709110917216_RemoveUserTest.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709120234374_AddHWStock.resx">
+      <DependentUpon>201709120234374_AddHWStock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709120706523_ChangeHWStockID.resx">
+      <DependentUpon>201709120706523_ChangeHWStockID.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709120821065_ChangeHWStockID1.resx">
+      <DependentUpon>201709120821065_ChangeHWStockID1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709130212058_ChangeHWStock.resx">
+      <DependentUpon>201709130212058_ChangeHWStock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709130326279_AddHWStockerrorMes.resx">
+      <DependentUpon>201709130326279_AddHWStockerrorMes.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entity\HuaweiOrderManage\" />
-    <Folder Include="IRepository\HuaweiOrderManage\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
