--- a/King.Application/King.Application.csproj
+++ b/King.Application/King.Application.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HuaweiOrderManage\HWVendorItemApp.cs" />
     <Compile Include="HuaweiOrderManage\HWStockApp.cs" />
     <Compile Include="Infrastructure\DbLogType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
