--- a/King.Domain/King.Domain.csproj
+++ b/King.Domain/King.Domain.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Context\Repository\IRepositoryBase.T.cs" />
     <Compile Include="Context\Repository\RepositoryBase.cs" />
     <Compile Include="Context\Repository\RepositoryBase.T.cs" />
+    <Compile Include="Entity\HuaweiOrderManage\HWVendorItemEntity.cs" />
     <Compile Include="Entity\HuaweiOrderManage\HWStockEntity.cs" />
     <Compile Include="Entity\SystemManage\AreaEntity.cs" />
     <Compile Include="Entity\SystemManage\ItemsDetailEntity.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Infrastructure\IDeleteAudited.cs" />
     <Compile Include="Infrastructure\IEntity.cs" />
     <Compile Include="Infrastructure\IModificationAudited.cs" />
+    <Compile Include="IRepository\HuaweiOrderManage\IHWVendorItemRepository.cs" />
     <Compile Include="IRepository\HuaweiOrderManage\IHWStockRepository.cs" />
     <Compile Include="IRepository\SystemManage\IAreaRepository.cs" />
     <Compile Include="IRepository\SystemManage\IItemsDetailRepository.cs" />
@@ -90,6 +92,7 @@
     <Compile Include="IRepository\SystemSecurity\IDbBackupRepository.cs" />
     <Compile Include="IRepository\SystemSecurity\IFilterIPRepository.cs" />
     <Compile Include="IRepository\SystemSecurity\ILogRepository.cs" />
+    <Compile Include="Mapping\HuaweiOrderManage\HWVendorItemMap.cs" />
     <Compile Include="Mapping\HuaweiOrderManage\HWStockMap.cs" />
     <Compile Include="Mapping\SystemManage\AreaMap.cs" />
     <Compile Include="Mapping\SystemManage\ItemsDetailMap.cs" />
@@ -136,6 +139,30 @@
     <Compile Include="Migrations\201709130326279_AddHWStockerrorMes.Designer.cs">
       <DependentUpon>201709130326279_AddHWStockerrorMes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711210143177_ChangeStock.cs" />
+    <Compile Include="Migrations\201711210143177_ChangeStock.Designer.cs">
+      <DependentUpon>201711210143177_ChangeStock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711210221299_ChangeStock1.cs" />
+    <Compile Include="Migrations\201711210221299_ChangeStock1.Designer.cs">
+      <DependentUpon>201711210221299_ChangeStock1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711210811179_AddAgreement.cs" />
+    <Compile Include="Migrations\201711210811179_AddAgreement.Designer.cs">
+      <DependentUpon>201711210811179_AddAgreement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712041021560_AddVendorItem.cs" />
+    <Compile Include="Migrations\201712041021560_AddVendorItem.Designer.cs">
+      <DependentUpon>201712041021560_AddVendorItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712090251454_AddVendorItem1.cs" />
+    <Compile Include="Migrations\201712090251454_AddVendorItem1.Designer.cs">
+      <DependentUpon>201712090251454_AddVendorItem1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712090812311_AddVendorItem2.cs" />
+    <Compile Include="Migrations\201712090812311_AddVendorItem2.Designer.cs">
+      <DependentUpon>201712090812311_AddVendorItem2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\AuthorizeActionModel.cs" />
@@ -174,6 +201,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709130326279_AddHWStockerrorMes.resx">
       <DependentUpon>201709130326279_AddHWStockerrorMes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711210143177_ChangeStock.resx">
+      <DependentUpon>201711210143177_ChangeStock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711210221299_ChangeStock1.resx">
+      <DependentUpon>201711210221299_ChangeStock1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711210811179_AddAgreement.resx">
+      <DependentUpon>201711210811179_AddAgreement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712041021560_AddVendorItem.resx">
+      <DependentUpon>201712041021560_AddVendorItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712090251454_AddVendorItem1.resx">
+      <DependentUpon>201712090251454_AddVendorItem1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712090812311_AddVendorItem2.resx">
+      <DependentUpon>201712090812311_AddVendorItem2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
