--- a/King.Repository/King.Repository.csproj
+++ b/King.Repository/King.Repository.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HuaweiOrderManage\HWVendorItemRepository.cs" />
     <Compile Include="HuaweiOrderManage\HWStockRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemManage\AreaRepository.cs" />
