修改编辑样式、正式平台地址

--- a/KingPlatform/Configs/database.config
+++ b/KingPlatform/Configs/database.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <connectionStrings>
-  <add name="KingDbContext" connectionString="Server=.;Initial Catalog=KingDataBase;User ID=sa;Password=aA123456" providerName="System.Data.SqlClient" />
+  <add name="KingDbContext" connectionString="Server=;Initial Catalog=KingDataBase;User ID=sa;Password=aA1234567890" providerName="System.Data.SqlClient" />
 </connectionStrings>
