--- a/KingPlatform/Web.config
+++ b/KingPlatform/Web.config
@@ -24,6 +24,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <customErrors mode="RemoteOnly"/>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
